# epistemic-active-calibration

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  LICENSE  NOTICE  README.md  main.py  pyproject.toml
configs/: default.yaml
experiments/: _multiseed_smoke.py  analyze_calib_threshold.py  baseline_comparison.py  dem_adem_2dof_control.py  dem_adem_goal_reaching.py  dem_demo_generalized_motion.py  dem_demo_linear.py  dem_demo_oscillator.py  dem_demo_param_estimation.py  dem_estep_param_identification.py  dem_mujoco_2dof_arm.py  dem_mujoco_pendulum.py  dual_control_1d_obs.py  dual_control_2dof.py  epistemic_calibration_2dof.py  four_condition_comparison.py  hard_tail_seed_diagnostics.py  identifiability_stress_test.py  iiwa_terminal_case_study.py  lambda_sweep.py  make_iiwa_figure.py  multiseed_comparison.py  noise_sweep_2d.py  noise_sweep_2d_gpu.py  phase0_foundation.py  phase1_trajectory_analysis.py  phase2_ablation.py  phase2_horizon_sweep.py  phase4_risk_aware_probing.py  phase5_rollout_risk_probing.py  phase6_adaptive_posture.py  phase7_late_rollout_risk_probe.py  phase8_q0_generalization.py  phase9_qref_sensitivity.py  probing_direction_diagnostics.py  redundant_arm_calibration.py  redundant_arm_failure_diagnostics.py  redundant_arm_phase2_control_study.py  redundant_arm_transition_sweep.py  robustness_grid.py  (+9 more)
notebooks/: 01_pymdp_basics.ipynb  02_generative_model_design.ipynb  03_mujoco_aif_loop.ipynb
results/: 2dof_calibration_grid.json  ablation_fg.json  bootstrap_ci_2d.json  bootstrap_ci_2d_gpu.json  dual_control_1d_obs_summary.json  fairness_H.json  (+35 more)
(+43 files in other folders)
